test/files/neg/badtok-1.scala
// bug 989
'42'


// SI-10133
'''

'';

// SI-10120
'abc'

'
