test/files/neg/badtok-1.check
badtok-1.scala:2: error: unclosed character literal
'42'
^
badtok-1.scala:2: error: unclosed character literal
'42'
   ^
badtok-1.scala:6: error: empty character literal (use '\'' for single quote)
'''
^
badtok-1.scala:6: error: unclosed character literal
'''
  ^
badtok-1.scala:8: error: empty character literal
'';
^
badtok-1.scala:10: error: unclosed character literal
'
^
6 errors found
